plugins {
	id 'java'
	id 'jacoco' // <-- Plugin JaCoCo
	id 'org.springframework.boot' version '3.0.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.playko'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.1'

	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.apache.poi:poi-ooxml:5.2.3'
	implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'
	implementation 'com.openhtmltopdf:openhtmltopdf-slf4j:1.0.10'

	implementation 'software.amazon.awssdk:s3:2.25.61'
	implementation 'software.amazon.awssdk:auth:2.25.61'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.772'
	implementation "software.amazon.awssdk:sqs:2.20.0"
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.cloud:spring-cloud-starter-aws'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
	implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final'

	runtimeOnly 'org.postgresql:postgresql'

	implementation 'com.auth0:java-jwt:4.4.0'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	compileOnly 'org.projectlombok:lombok:1.18.26'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5',
			'io.jsonwebtoken:jjwt-jackson:0.11.5'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// Mockito
	testImplementation 'org.mockito:mockito-core:5.10.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'

	// (Opcional, solo si usas seguridad en tests)
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport // <-- Ejecuta JaCoCo después de los tests
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}

	classDirectories.setFrom(
			files(classDirectories.files.collect { fileTree(dir: it, exclude: [
					'com/playko/zoologico/dto/**',
					'com/playko/zoologico/entity/**'
			]) })
	)
}

